<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".PlayerActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/back_btn"
            android:contentDescription="@string/back_btn"
            android:layout_margin="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="0dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="18dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginVertical="5dp"
            android:text="@string/WorldOfMusic" />
        <ImageButton
            android:id="@+id/favourite_btn"
            android:layout_margin="5dp"
            android:contentDescription="@string/Favourite_btn"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_favorite_border_24"
            app:tint="@android:color/holo_red_dark" />
    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/album"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="60dp"
        android:paddingTop="20dp"
        android:src="@drawable/album4" />

    <TextView
        android:id="@+id/song_name"
        android:textSize="20dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/songName"
        android:layout_marginVertical="5dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/previous_song"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:icon="@drawable/ic_baseline_arrow_back_ios_24" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/pause_play"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="25dp"
            app:icon="@drawable/ic_baseline_pause_24" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/next_song"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:icon="@drawable/ic_baseline_arrow_forward_ios_24" />
    </LinearLayout>

    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="25dp">
        <TextView
            android:id="@+id/seekbarStart"
            android:textSize="20dp"
            android:text="@string/start_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/timeSeekbar"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/seekbarEnd"
            android:text="@string/end_tv"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <ImageButton
            android:id="@+id/repeat_btn"
            android:layout_weight="1"
            android:contentDescription="@string/repeat_btn"
            android:layout_margin="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_repeat_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:id="@+id/Equa_btn"
            android:layout_weight="1"
            android:contentDescription="@string/eq_btn"
            android:layout_margin="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_graphic_eq_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:id="@+id/timer_btn"
            android:layout_weight="1"
            android:contentDescription="@string/timer_btn"
            android:layout_margin="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_timer_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:id="@+id/share_btn"
            android:layout_weight="1"
            android:contentDescription="@string/share_btn"
            android:layout_margin="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_share_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>