<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/suffer_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/Shuffle_btn"
                android:drawableTop="@drawable/ic_baseline_shuffle_24"
                android:text="@string/Shuffle_btn"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/favr_btn"
                android:layout_weight="1"
                android:text="@string/Favourite_btn"
                android:drawableTop="@drawable/ic_baseline_favorite_24"
                android:contentDescription="@string/Favourite_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/playList_btn"
                android:layout_weight="1"
                android:text="@string/PlayList_btn"
                android:drawableTop="@drawable/ic_baseline_library_music_24"
                android:contentDescription="@string/PlayList_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                android:textAllCaps="false"/>
        </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/music_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>


</androidx.drawerlayout.widget.DrawerLayout>